--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
 	"name": "lang-htmx",
 	"version": "0.0.0",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "bun run --watch src/index.tsx"
+		"dev": "bun run --watch src/index.tsx",
+		"build": "bun build src/index.tsx --target=bun",
+		"start": "NODE_ENV=production bun src/index.tsx"
 	},
 	"dependencies": {
-		"@elysiajs/html": "^1.1.0",
+		"@elysiajs/html": "1.0.0",
 		"elysia": "latest",
 		"fastest-levenshtein": "^1.0.16"
 	},
 	"devDependencies": {
 		"@elysiajs/eden": "^1.1.2",
+		"@flydotio/dockerfile": "^0.5.8",
 		"bun-types": "latest"
 	},
 	"module": "src/index.js"
