--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lang-htmx",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +11,14 @@
 	"dependencies": {
 		"@elysiajs/html": "1.0.0",
 		"elysia": "latest",
-		"fastest-levenshtein": "^1.0.16"
+		"fastest-levenshtein": "^1.0.16",
+		"sanitize-html": "^2.13.0"
 	},
 	"devDependencies": {
 		"@elysiajs/eden": "^1.1.2",
 		"@flydotio/dockerfile": "^0.5.8",
+		"@kitajs/ts-html-plugin": "^4.0.2",
+		"@types/sanitize-html": "^2.13.0",
 		"bun-types": "latest"
 	},
 	"module": "src/index.js"
