--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"jsx": "react",
 		"jsxFactory": "Html.createElement",
 		"jsxFragmentFactory": "Html.Fragment",
+		"plugins": [{ "name": "@kitajs/ts-html-plugin" }],
 		/* Visit https://aka.ms/tsconfig to read more about this file */
 
 		/* Projects */
